[gd_scene load_steps=2 format=3 uid="uid://c20arvkdq1y3v"]

[ext_resource type="Script" path="res://Scenes/UI/menus/menu_upgrades.gd" id="1_qdlfk"]

[node name="menu_upgrades" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qdlfk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.258824, 0.141176, 0.380392, 0.270588)

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="option_1" type="MarginContainer" parent="MarginContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/MarginContainer2/HBoxContainer/option_1"]
layout_mode = 2
color = Color(0.27323, 0.15675, 0.320114, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/option_1"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/option_1/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label1" type="RichTextLabel" parent="MarginContainer/MarginContainer2/HBoxContainer/option_1/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "LABEL THAT SAYS ALL THE COOL STUFF ABOUT THE UPGRADE. THIS IS AN UPGRADE FOR upgrade"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/option_1/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="pick_option_1" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/option_1/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "UPGRADE OPTION 1"

[node name="option_2" type="MarginContainer" parent="MarginContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/MarginContainer2/HBoxContainer/option_2"]
layout_mode = 2
color = Color(0.27323, 0.15675, 0.320114, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/option_2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/option_2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label2" type="RichTextLabel" parent="MarginContainer/MarginContainer2/HBoxContainer/option_2/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "LABEL THAT SAYS ALL THE COOL STUFF ABOUT THE UPGRADE. THIS IS AN UPGRADE FOR upgrade"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/option_2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="pick_option_2" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/option_2/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "UPGRADE OPTION 1"

[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/option_1/VBoxContainer/MarginContainer2/pick_option_1" to="." method="_on_pick_option_1_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/option_2/VBoxContainer/MarginContainer2/pick_option_2" to="." method="_on_pick_option_2_pressed"]
